AP-155: Generate a deployable sensor YAML for Kubernetes, enable MTLS
Adjust generated Kubernetes YAML to account for MTLS.
Add a deployment script, `./deploy/k8s/deploy.sh`, to run Apollo.
Add a service to make the Kubernetes Sensor reachable at
`sensor.stackrox`.
Separate in-cluster from external endpoints in scripts.
Mount secrets under /run/secrets/stackrox.io, not /run/secrets,
to avoid conflicts with the Kubernetes service account token.

Merge AP-155-k8s-yaml-cg (pull request #113)

Approved-by: Connor Gorman <cgorman@stackrox.com>

--- a/deploy/swarm/central.yaml
+++ b/deploy/swarm/central.yaml
@@ -11,10 +11,10 @@ services:
         mode: ingress
     secrets:
       - source: apollo_private_key
-        target: ca-key.pem
+        target: stackrox.io/ca-key.pem
         mode: 400
       - source: apollo_certificate
-        target: ca-cert.pem
+        target: stackrox.io/ca.pem
         mode: 400
 networks:
   net:
