--- a/apollo-ui/package.json
+++ b/apollo-ui/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "1.0.17",
     "react-spinners": "^0.2.5",
     "react-toastify": "^3.2.1",
+    "react-transition-group": "^2.2.1",
     "recharts": "^1.0.0-beta.9",
     "tailwindcss": "^0.3.0"
   },
