--- a/image/policies/files/nginx.json
+++ b/image/policies/files/nginx.json
@@ -1,12 +1,13 @@
 {
-  "name": "DockerHub NGINX",
-  "description": "Alert on deployments with nginx image from 'docker.io'",
+  "name": "DockerHub Nginx 1.10",
+  "description": "Alert on deployments with nginx:1.10 image from 'docker.io'",
   "severity": "MEDIUM_SEVERITY",
   "categories": ["IMAGE_ASSURANCE"],
   "image_policy": {
     "image_name": {
       "registry": "docker.io",
-      "repo": "nginx"
+      "repo": "nginx",
+      "tag": "1.10"
     }
   }
 }
