AP-181: Rename visible UI elements: 'Harden' -> 'Mitigate'
Merged in ivan/AP-181-ui-rename-to-mitigate (pull request #126)

--- a/apollo-ui/public/manifest.json
+++ b/apollo-ui/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "StackRox Harden",
-  "name": "StackRox Harden",
+  "short_name": "StackRox Mitigate",
+  "name": "StackRox Mitigate",
   "icons": [
     {
       "src": "favicon.ico",
