AP-156: Add Docker API auth to Swarm sensor deployment configs
In clusters in which the Docker API is accessible over TCP with client
TLS certificates, the sensor configuration must provide access to the
relevant secrets. Change the generated Swarm YAML and command to
find and provide these details to the sensor.

Merge AP-156-fix-sensor-on-real-swarm-cg (pull request #127)

Approved-by: Connor Gorman <cgorman@stackrox.com>

--- a/deploy/swarm/central.yaml
+++ b/deploy/swarm/central.yaml
@@ -9,6 +9,11 @@ services:
         published: 8080
         protocol: tcp
         mode: ingress
+    ports:
+      - target: 443
+        published: 8080
+        protocol: tcp
+        mode: ingress
     secrets:
       - source: mitigate_private_key
         target: stackrox.io/ca-key.pem
