AP-190: Apply gzip HTTP encoding to UI assets and gRPC Gateway
Add a gzip compression handler to the UI static-asset muxer and to the
gRPC Gateway JSON muxer.

Merge AP-190-gzip-http-cg (pull request #136)
Approved-by: Connor Gorman <cgorman@stackrox.com>

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -97,3 +97,6 @@ ignored = ["bitbucket.org/stack-rox/apollo","github.com/docker/docker/daemon"]
 [[constraint]]
   name = "github.com/cloudflare/cfssl"
   branch = "master"
+[[constraint]]
+  name = "github.com/NYTimes/gziphandler"
+  version = "1.0.0"
