--- a/ui/package.json
+++ b/ui/package.json
@@ -22,13 +22,13 @@
     "react-form": "^2.15.2",
     "react-modal": "^3.1.7",
     "react-router-dom": "^4.2.2",
+    "react-router-prop-types": "^0.0.3",
     "react-scripts": "1.0.17",
     "react-select": "^1.1.0",
     "react-spinners": "^0.2.5",
     "react-toastify": "^3.2.1",
     "react-transition-group": "^2.2.1",
     "recharts": "^1.0.0-beta.9",
-    "react-toastify": "^3.2.1",
     "tailwindcss": "^0.3.0"
   },
   "scripts": {
