AP-227: Generate Central deployments in the image
Add a program, `deploy`, into the image, that can be used to generate
YAML and script configurations for Central. Use this in scripts.

Merge cg/AP-227-deploy-cmd (pull request #151)
Approved-by: Connor Gorman <cgorman@stackrox.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,8 @@ jobs:
     working_directory: /go/src/bitbucket.org/stack-rox/apollo
     steps:
       - checkout
+      - setup_remote_docker
+      - run: docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_PASSWORD"
       - run: make deps generated-srcs
 
       # Set Env
