--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -100,3 +100,7 @@ ignored = ["bitbucket.org/stack-rox/apollo","github.com/docker/docker/daemon"]
 [[constraint]]
   name = "github.com/NYTimes/gziphandler"
   version = "1.0.0"
+
+[[constraint]]
+  name = "github.com/spf13/cobra"
+  version = "0.0.1"
