--- a/ui/package.json
+++ b/ui/package.json
@@ -36,7 +36,10 @@
     "build": "tailwind build ./src/app.css -c ./tailwind.js -o ./src/index.css && NODE_PATH=src react-scripts build",
     "test": "NODE_PATH=src react-scripts test --env=jsdom --coverage",
     "test-watch": "NODE_PATH=src react-scripts test --env=jsdom",
-    "lint": "eslint src prod",
+    "lint": "eslint src prod cypress",
+    "cypress-open": "cypress open",
+    "test-e2e-local": "cypress run",
+    "test-e2e-ci": "cypress run --reporter mocha-multi-reporters --reporter-options configFile=cypress/mocha.config.json",
     "eject": "react-scripts eject"
   },
   "proxy": {
@@ -48,10 +51,15 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.0.3",
+    "cypress": "^1.4.1",
     "eslint": "^4.14.0",
     "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-cypress": "^2.0.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.5.1"
+    "eslint-plugin-react": "^7.5.1",
+    "mocha": "^5.0.0",
+    "mocha-junit-reporter": "^1.17.0",
+    "mocha-multi-reporters": "^1.1.7"
   }
 }
