--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -97,6 +97,7 @@ ignored = ["bitbucket.org/stack-rox/apollo","github.com/docker/docker/daemon"]
 [[constraint]]
   name = "github.com/cloudflare/cfssl"
   branch = "master"
+
 [[constraint]]
   name = "github.com/NYTimes/gziphandler"
   version = "1.0.0"
@@ -104,3 +105,7 @@ ignored = ["bitbucket.org/stack-rox/apollo","github.com/docker/docker/daemon"]
 [[constraint]]
   name = "github.com/spf13/cobra"
   version = "0.0.1"
+
+[[constraint]]
+  version = "2.1.3"
+  name = "gopkg.in/square/go-jose.v2"
