--- a/ui/src/.eslintrc
+++ b/ui/src/.eslintrc
@@ -1,4 +1,7 @@
 {
+    "extends": [
+        "prettier/react"
+    ],
     "env" : {
         "browser": true
     },
@@ -13,15 +16,7 @@
     "rules": {        
         // https://github.com/yannickcr/eslint-plugin-react/blob/master/docs/rules/jsx-filename-extension.md
         // allow JSX in .js files
-        "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
-
-        // https://github.com/yannickcr/eslint-plugin-react/blob/master/docs/rules/jsx-indent.md
-        // changing indent from 2 to 4
-        "react/jsx-indent": ["error", 4],
-
-        // https://github.com/yannickcr/eslint-plugin-react/blob/master/docs/rules/jsx-indent-props.md
-        // changing indent from 2 to 4
-        "react/jsx-indent-props": ["error", 4],
+        "react/jsx-filename-extension": ["error", { "extensions": [".js"] }],
 
         // https://github.com/yannickcr/eslint-plugin-react/blob/master/docs/rules/jsx-no-bind.md
         // forbid arrow functions as well
@@ -31,33 +26,15 @@
             "allowBind": false
         }],
   
+        // Reconfigure for using react-router Link
+        "jsx-a11y/anchor-is-valid": [ "error", {
+            "components": [ "Link" ],
+            "specialLink": [ "to", "hrefLeft", "hrefRight" ],
+            "aspects": [ "noHref", "invalidHref", "preferButton" ]
+        }],
+        
         // TODO-ivan: rules below are to be removed after fixing all violations in the code
-        "react/prop-types": "warn",
-        "react/no-array-index-key": "warn",
-        "react/no-unused-state": "warn",
-    
-        "jsx-a11y/no-static-element-interactions": "warn",
-        "jsx-a11y/click-events-have-key-events": "warn",
-
-        // When using the react-router-dom Link component, we can exclude the href
-        "jsx-a11y/anchor-is-valid": [
-            "error",
-            {
-                "components": [
-                    "Link"
-                ],
-                "specialLink": [
-                    "to",
-                    "hrefLeft",
-                    "hrefRight"
-                ],
-                "aspects": [
-                    "noHref",
-                    "invalidHref",
-                    "preferButton"
-                ]
-            }
-        ]
+        "react/no-array-index-key": "warn"
     },
     "overrides": [
         {
