AP-297: Fix navigation from Dashboard Also upgrade Cypress.io deps. Add more UI e2e tests.
Merged in ivan/AP-297-fix-dashboard-navigation (pull request #213)

--- a/ui/package.json
+++ b/ui/package.json
@@ -55,7 +55,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.0.3",
-    "cypress": "^1.4.1",
+    "cypress": "1.4.2",
     "eslint": "^4.14.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
