--- a/image/policies/files/nginx.json
+++ b/image/policies/files/nginx.json
@@ -10,6 +10,6 @@
       "tag": "1.10"
     }
   },
-  "rationale": "This is an example of policy that you could create. nginx:1.10 has many vulnerabilities",
-  "remediation": "Migrate to the latest stable release of NGINX"
+  "rationale": "This is an example of policy that you could create. nginx:1.10 has many vulnerabilities.",
+  "remediation": "Migrate to the latest stable release of NGINX."
 }
