Upgrade certificate-transparency-go to fix Darwin build
Tell `dep` that we would like to run a later version of
certificate-transparency-go than the version Cloudflare vendors.

Specifically, we need the following commmit from
github.com/google/certificate-transparency-go:
391726f8973ddb3521ab1a462bd55a35c6f67f0b

This is due to that dependency's use of a forked version of
crypto/x509.

Pull request #254
Approved-by: Connor Gorman <cgorman@stackrox.com>

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -98,6 +98,10 @@ ignored = ["bitbucket.org/stack-rox/apollo","github.com/docker/docker/daemon"]
   name = "github.com/cloudflare/cfssl"
   branch = "master"
 
+[[override]]
+  name = "github.com/google/certificate-transparency-go"
+  branch = "master"
+
 [[constraint]]
   name = "github.com/NYTimes/gziphandler"
   version = "1.0.0"
