--- a/ui/package.json
+++ b/ui/package.json
@@ -12,8 +12,10 @@
     "express": "^4.16.2",
     "fbemitter": "^2.1.1",
     "flat": "^4.0.0",
+    "history": "^4.7.2",
     "http-proxy-middleware": "^0.17.4",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.5",
+    "normalizr": "^3.2.4",
     "object-resolve-path": "^1.1.1",
     "prop-types": "^15.6.0",
     "query-string": "^5.0.1",
@@ -23,8 +25,10 @@
     "react-form": "^2.15.2",
     "react-modal": "^3.1.7",
     "react-numeric-input": "^2.2.3",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-prop-types": "^0.0.3",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.0.17",
     "react-select": "^1.1.0",
     "react-spinners": "^0.2.5",
@@ -32,6 +36,9 @@
     "react-tooltip": "^3.4.0",
     "react-transition-group": "^2.2.1",
     "recharts": "^1.0.0-beta.9",
+    "redux": "^3.7.2",
+    "redux-saga": "^0.16.0",
+    "reselect": "^3.0.1",
     "store": "^2.0.12",
     "tailwindcss": "^0.3.0"
   },
@@ -66,6 +73,7 @@
     "mocha": "^5.0.0",
     "mocha-junit-reporter": "^1.17.0",
     "mocha-multi-reporters": "^1.1.7",
-    "prettier": "^1.10.2"
+    "prettier": "^1.10.2",
+    "redux-immutable-state-invariant": "^2.1.0"
   }
 }
