--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -18,37 +18,37 @@ ignored = ["bitbucket.org/stack-rox/apollo","github.com/docker/docker/daemon"]
   upstream = "17.09-ce plus additional commits to fix Darwin build"
 
 [[constraint]]
-  name = "github.com/docker/go-units"
-  revision = "0dadbb0345b35ec7ef35e228dabb8de89a65bf52"
-
-[[constraint]]
-  name = "github.com/golang/protobuf"
-  version = "1.0.0"
-
-[[constraint]]
-  name = "github.com/grpc-ecosystem/go-grpc-middleware"
-  revision = "6d3547c644afb325c16df96e3c7177ea6e2fdebd"
-
-[[constraint]]
-  name = "github.com/grpc-ecosystem/grpc-gateway"
-  revision = "c323909dd41de182a54b4d1610f26034da5e097e"
-
-[[constraint]]
-  name = "github.com/hashicorp/golang-lru"
-  revision = "0a025b7e63adc15a622f29b0b2c4c3848243bbf6"
-
-[[constraint]]
-  name = "github.com/heroku/docker-registry-client"
-  source = "git@bitbucket.org:stack-rox/docker-registry-client.git"
-  revision = "c0382be6e46b7f52b8c6dd0a91c1253e891645f8"
-
-[[constraint]]
   name = "github.com/opencontainers/runc"
   revision = "e6516b3d5dc780cb57a976013c242a9a93052543"
 
 [[constraint]]
+  name = "github.com/docker/go-units"
+  branch = "master"
+
+[[constraint]]
+  name = "github.com/golang/protobuf"
+  version = "=1.0.0"
+
+[[constraint]]
+  name = "github.com/grpc-ecosystem/go-grpc-middleware"
+  branch = "master"
+
+[[constraint]]
+  name = "github.com/grpc-ecosystem/grpc-gateway"
+  version = "1.3.1"
+
+[[constraint]]
+  name = "github.com/hashicorp/golang-lru"
+  branch = "master"
+
+[[constraint]]
+  name = "github.com/heroku/docker-registry-client"
+  source = "git@bitbucket.org:stack-rox/docker-registry-client.git"
+  branch = "master"
+
+[[constraint]]
   name = "github.com/satori/go.uuid"
-  revision = "5bf94b69c6b68ee1b541973bb8e1144db23a194b"
+  version = "=1.1.0"
 
 [[constraint]]
   name = "github.com/stretchr/testify"
@@ -56,11 +56,11 @@ ignored = ["bitbucket.org/stack-rox/apollo","github.com/docker/docker/daemon"]
 
 [[constraint]]
   name = "golang.org/x/net"
-  revision = "dc871a5d77e227f5bbf6545176ef3eeebf87e76e"
+  branch = "master"
 
 [[constraint]]
   name = "google.golang.org/genproto"
-  revision = "f676e0f3ac6395ff1a529ae59a6670878a8371a6"
+  branch = "master"
 
 [[constraint]]
   name = "google.golang.org/grpc"
