AP-338: Rename policy categories to readable form

--- a/image/policies/files/nginx.json
+++ b/image/policies/files/nginx.json
@@ -2,7 +2,7 @@
   "name": "DockerHub Nginx 1.10",
   "description": "Alert on deployments with nginx:1.10 image from 'docker.io'",
   "severity": "MEDIUM_SEVERITY",
-  "categories": ["IMAGE_ASSURANCE"],
+  "categories": ["Image Assurance"],
   "image_policy": {
     "image_name": {
       "registry": "docker.io",
