--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -117,3 +117,7 @@ ignored = ["bitbucket.org/stack-rox/apollo","github.com/docker/docker/daemon"]
 [[constraint]]
   name = "github.com/coreos/clair"
   version = "v2.0.1"
+
+[[constraint]]
+  name = "github.com/blevesearch/bleve"
+  version = "v0.7.0"
