Always collect logs for upload -- especially when tests fail!
Pull request #372
Approved-by: Connor Gorman <cgorman@stackrox.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -134,6 +134,7 @@ jobs:
           command: |
             ./scripts/ci/collect-service-logs.sh central
             ./scripts/ci/collect-service-logs.sh sensor
+          when: always
 
       - store_artifacts:
           path: /tmp/k8s-service-logs
