AP-547: Add a non-admin k8s RBAC policy for sensor
Change away from using cluster-admin in CI.
Provide an RBAC configuration that can be used for
sensors, and update the README to explain it.

Pull request #356
Approved-by: Connor Gorman <cgorman@stackrox.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,7 +103,7 @@ jobs:
             kubectl \
               --username="$(gcloud container clusters describe "mitigate-ci-${CIRCLE_BUILD_NUM}" --format json | jq -r .masterAuth.username)" \
               --password="$(gcloud container clusters describe "mitigate-ci-${CIRCLE_BUILD_NUM}" --format json | jq -r .masterAuth.password)" \
-              create clusterrolebinding stackrox-admin --clusterrole=cluster-admin --serviceaccount=stackrox:default
+              create -f ./deploy/k8s/rbac.yaml
             ./deploy/k8s/deploy.sh
 
       - run:
